--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,158 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --light: #edf0f1;
+    --dark: #181618;
+    --primary: #a8dadc;
+}
+
+.dark-mode {
+    --light: #181618; /* Invert light color to dark */
+    --dark: #edf0f1;  /* Invert dark color to light */
+    --primary: #a8dadc; /* Keep the same primary color */
+}
+
 * {
     font-family: "Roboto";
-    background-color: #181618;
-    overflow-x: hidden;
 }
+
+body {
+    overflow-x: hidden;
+    background-color: var(--dark);
+}
+
+h1 {
+    font-weight: 600;
+    font-size: 3rem;
+    color: var(--light);
+}
+
+p {
+    font-size: 1rem;
+    color: var(--light);
+}
+
+/* TOAST */
+
+#toast-box {
+    position: fixed;
+    bottom: 5px;
+    right: 40.5%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 20px;
+}
+
+.toast {
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 12px;
+    max-width: 320px;
+    width: 320px;
+    padding: 10px;
+    background-color: var(--dark);
+    color: #edf0f1;
+    margin: 20px 0px;
+    font-weight: 500;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    transform: translateY(30px);
+    animation: fade-in 4s linear;
+}
+
+.toast::after {
+    content: '';
+    border-radius: inherit;
+    position: absolute;
+    bottom: 4px;
+    left: 8px;
+    width: calc(100% - 16px);
+    height: 4px;
+    transform: scaleX(0);
+    transform-origin: left;
+    background: linear-gradient(to right, var(--dark), #a8dadc);
+    animation: progress 4s linear forwards;
+}
+
+@keyframes fade-in {
+    5% {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+    }
+
+    95% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes progress {
+    to {
+        transform: scaleX(1);
+    }
+}
+
+.svg-icon {
+    margin: 10px;
+}
+
+/* SWITCH */
+
+.toggle-switch {
+    width: 100px;
+}
+
+.toggle-switch label {
+    width: 100px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.toggle-switch label input {
+    display: none;
+}
+
+.slider {
+    position: absolute;
+    top: 32.5px;
+    right: 120px;
+    width: 100px;
+    height: 50px;
+    border-radius: 50px;
+    transition: 0.3s;
+}
+
+input:checked ~ .slider {
+    background-color: var(--light);
+}
+
+input:not(:checked) ~ .slider {
+    background-color: var(--dark);
+}
+
+.slider::before {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 10px;
+    width: 37.5px;
+    height: 37.5px;
+    border-radius: 50%;
+    box-shadow: inset 15px 0px 0px 0px var(--light);
+    background-color: var(--dark);
+    transition: 0.3s;
+}
+
+input:checked ~ .slider::before {
+    transform: translateX(47.5px);
+    box-shadow: none;
+}
+
+/* NAVBAR */
 
 .navbar {
     display: flex;
@@ -16,14 +164,14 @@
 li, a {
     font-weight: 500;
     font-size: 16px;
-    color: #edf0f1;
+    color: var(--light);
     text-decoration: none;
 }
 
 .logo {
     cursor: pointer;
     font-size: 40px;
-    color: #edf0f1;
+    color: var(--light);
 }
 
 .links {
@@ -46,7 +194,7 @@ li, a {
     bottom: -6px;
     width: 100%;
     height: 3px;
-    background-color: #edf0f1;
+    background-color: var(--light);
     border-radius: 5px;
     transform: scaleX(0);
     transition: all 0.4s;
@@ -60,7 +208,7 @@ li, a {
     cursor: pointer;
     width: 120px;
     height: 45px;
-    background-color: #a5f2ff;
+    background-color: var(--primary);
     border: none;
     outline: none;
     border-radius: 11px;
@@ -76,41 +224,151 @@ li, a {
     width: 120px;
     height: 45px;
     background: transparent;
-    border: 2px solid #a5f2ff;
-    border-color: #a5f2ff;
+    border: 2px solid var(--primary);
+    border-color: var(--primary);
     outline: none;
     border-radius: 11px;
     font-weight: 400;
     font-size: 16px;
-    color: #edf0f1;
+    color: var(--light);
     text-decoration: none;
     margin: 10px;
+    margin-right: 10px;
 }
+
+/* HEADER */
 
 .header {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-content: center;
     justify-content: center;
-    padding: 80px 300px 10px 300px;
+    text-align: center;
+    height: 830px;
+    margin: 0px 300px 0px 300px;
 }
-
-.header div h1 {
-    font-size: 60px;
-    color: #edf0f1;
-    width: 600px;
-}
-
-.header div p {
-    font-size: 16px;
-    color: #edf0f1;
-    width: 500px;
-    line-height: 25px;
-}
-
 
 .card {
+    display: flex;
+    flex-direction: column;
     border-radius: 5px;
     background-color: #1c1d1d;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    padding: 0px 50px 50px 50px;
     height: 600px;
+    width: 500px;
+}
+
+.card h1 {
+    font-size: 60px;
+    color: var(--light);
+    background-color: #00000000;
+}
+
+.card p {
+    font-size: 26px;
+    color: var(--light);
+    background-color: #00000000;
+}
+
+.background-1 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://images.unsplash.com/photo-1626285265896-49c3abb3952e?auto=format&fit=crop&q=80&w=1964&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-position: bottom;
+    z-index: -1;
+}
+
+.background-2 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://www.raicultura.it/dl/img/2019/10/04/1570203895060_h_00100269.jpg);
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+}
+
+
+.background-3 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://upload.wikimedia.org/wikipedia/commons/8/8e/Diga_del_Vajont_.jpg);
+    background-size: cover;
+    z-index: -1;
+}
+
+/* HISTORY */
+
+
+
+/* FOOTER */
+
+
+footer{
+    background: var(--dark);
+    height: auto;
+    width: 100vw;
+    font-family: "Open Sans";
+    padding-top: 40px;
+    color: #fff;
+}
+
+.footer-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer-content h1{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.footer-contacts{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+
+.footer-contacts a{
+    margin: 0px 10px;
+}
+
+.footer-contacts a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.footer-contacts a{
+    font-size: 1.1rem;
+    transition: color .4s ease;
+}
+
+.footer-contacts a:hover{
+    color: var(--primary);
+}
+
+.footer-bottom{
+    background: var(--dark);
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+}
+
+.footer-bottom span{
+    color: var(--primary);
+    font-weight: 500;
 }
