--- a/src/app.css
+++ b/src/app.css
@@ -1,535 +1,471 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import"https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
 :root {
     --light: #edf0f1;
     --dark: #181618;
     --dark-100: #1c1d1d;
     --primary: #a8dadc;
-    --secondary: #132c1c;
+    --secondary: #132c1c
 }
-
 * {
-    font-family: "Roboto";
+    font-family:Roboto
 }
-
 body {
-    overflow-x: hidden;
-    background-color: var(--dark);
+    overflow-x:hidden;
+    background-color:var(--dark)
 }
-
 body::-webkit-scrollbar {
-    width: 8px;
+    width:8px
 }
-
 body::-webkit-scrollbar-thumb {
-    background: gray;
-    border-radius: 10px;
-    border: 2px solid transparent;
-    background-clip: padding-box;
+    background:gray;
+    border-radius:10px;
+    border:2px solid transparent;
+    background-clip:padding-box
 }
-
-
 h1 {
-    font-weight: 600;
-    font-size: 2rem;
-    color: var(--light);
+    font-weight:600;
+    font-size:2rem;
+    color:var(--light)
 }
-
+h2 {
+    font-weight:600;
+    color:var(--light)
+}
 p {
-    line-height: 22.5px;
-    font-size: 1rem;
-    color: var(--light);
+    line-height:22.5px;
+    font-size:1rem;
+    color:var(--light)
 }
-
-/* MENU */
-
+.m-5 {
+    margin:50px
+}
 .dropdown {
-    cursor: pointer;
-    height: 0px;
+    cursor:pointer;
+    height:0px
 }
-
 .dropdown p {
-    display: inline-block;
+    display:inline-block
 }
-
 .menu {
-    overflow-y: auto;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 270px;
-    max-height: 286px;
-    padding: 10px;
-    background: var(--dark);
-    border-radius: 12px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    opacity: 0;
-    visibility: hidden;
-    transition: 0.3s;
-    appearance: none;
+    overflow-y:auto;
+    position:relative;
+    display:flex;
+    flex-direction:column;
+    width:270px;
+    max-height:286px;
+    padding:10px;
+    background:var(--dark);
+    border-radius:12px;
+    box-shadow:#959da533 0 8px 24px;
+    opacity:0;
+    visibility:hidden;
+    transition:.3s;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none
 }
-
 .menu::-webkit-scrollbar {
-    width: 11px;
+  width:11px
 }
-
 .menu::-webkit-scrollbar-thumb {
-    background: gray;
-    border-radius: 10px;
-    border: 4px solid transparent;
-    background-clip: padding-box;
+  background:gray;
+  border-radius:10px;
+  border:4px solid transparent;
+  background-clip:padding-box
 }
-
-.dropdown:hover > .menu {
-    opacity: 1;
-    visibility: visible;
+.dropdown:hover>.menu {
+  opacity:1;
+  visibility:visible
 }
-
 .dropdown {
-    position: relative;
-    display: inline-block;
+  position:relative;
+  display:inline-block
 }
-
-/* TOAST */
-
 #toast-box {
-    position: fixed;
-    bottom: 5px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    padding: 20px;
+  position:fixed;
+  bottom:5px;
+  left:50%;
+  transform:translate(-50%);
+  display:flex;
+  flex-direction:column;
+  overflow:hidden;
+  padding:20px
 }
-
 .toast {
-    opacity: 0;
-    visibility: hidden;
-    border-radius: 12px;
-    width: 320px;
-    padding: 10px;
-    background-color: var(--dark);
-    color: #edf0f1;
-    margin: 20px 0px;
-    font-weight: 500;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    display: flex;
-    align-items: center;
-    position: relative;
-    transform: translateY(30px);
-    animation: fade-in 4s linear;
+  opacity:0;
+  visibility:hidden;
+  border-radius:12px;
+  width:320px;
+  padding:10px;
+  background-color:var(--dark);
+  color:#edf0f1;
+  margin:20px 0;
+  font-weight:500;
+  box-shadow:#959da533 0 8px 24px;
+  display:flex;
+  align-items:center;
+  position:relative;
+  transform:translateY(30px);
+  animation:fade-in 4s linear
 }
-
-.toast::after {
-    content: '';
-    border-radius: inherit;
-    position: absolute;
-    bottom: 4px;
-    left: 8px;
-    width: calc(100% - 16px);
-    height: 4px;
-    transform: scaleX(0);
-    transform-origin: left;
-    background: linear-gradient(to right, var(--dark), var(--primary));
-    animation: progress 4s linear forwards;
+.toast:after {
+  content:"";
+  border-radius:inherit;
+  position:absolute;
+  bottom:4px;
+  left:8px;
+  width:calc(100% - 16px);
+  height:4px;
+  transform:scaleX(0);
+  transform-origin:left;
+  background:linear-gradient(to right,var(--dark),var(--primary));
+  animation:progress 4s linear forwards
 }
-
 @keyframes fade-in {
-    5% {
-        opacity: 1;
-        visibility: visible;
-        transform: translateY(0);
-    }
-
-    95% {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  5% {
+    opacity:1;
+    visibility:visible;
+    transform:translateY(0)
+  }
+  95% {
+    opacity:1;
+    transform:translateY(0)
+  }
 }
-
 @keyframes progress {
-    to {
-        transform: scaleX(1);
-    }
+  to {
+    transform:scaleX(1)
+  }
 }
-
 .svg-icon {
-    margin: 10px;
+  margin:10px
 }
-
-/* SWITCH */
-
 .toggle-switch {
-    width: 100px;
+  width:100px
 }
-
 .toggle-switch label {
-    width: 100px;
-    height: 50px;
-    cursor: pointer;
+  width:100px;
+  height:50px;
+  cursor:pointer
 }
-
 .toggle-switch label input {
-    display: none;
+  display:none
 }
-
 .slider {
-    position: absolute;
-    top: 32.5px;
-    right: 120px;
-    width: 100px;
-    height: 50px;
-    border-radius: 50px;
-    transition: 0.3s;
+  position:absolute;
+  top:32.5px;
+  right:120px;
+  width:100px;
+  height:50px;
+  border-radius:50px;
+  transition:.3s
 }
-
-input:checked ~ .slider {
-    background-color: var(--light);
+input:checked~.slider {
+  background-color:var(--light)
 }
-
-input:not(:checked) ~ .slider {
-    background-color: var(--dark);
+input:not(:checked)~.slider {
+  background-color:var(--dark)
 }
-
-.slider::before {
-    content: "";
-    position: absolute;
-    top: 6px;
-    left: 10px;
-    width: 37.5px;
-    height: 37.5px;
-    border-radius: 50%;
-    box-shadow: inset 15px 0px 0px 0px var(--light);
-    background-color: var(--dark);
-    transition: 0.3s;
+.slider:before {
+  content:"";
+  position:absolute;
+  top:6px;
+  left:10px;
+  width:37.5px;
+  height:37.5px;
+  border-radius:50%;
+  box-shadow:inset 15px 0 0 0 var(--light);
+  background-color:var(--dark);
+  transition:.3s
 }
-
-input:checked ~ .slider::before {
-    transform: translateX(47.5px);
-    box-shadow: none;
+input:checked~.slider:before {
+  transform:translate(47.5px);
+  box-shadow:none
 }
-
-/* NAVBAR */
-
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0px 100px 0px 100px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  margin:0 100px
 }
-
-li, a {
-    font-weight: 500;
-    font-size: 16px;
-    color: var(--light);
-    text-decoration: none;
+li,
+a {
+  font-weight:500;
+  font-size:16px;
+  color:var(--light);
+  text-decoration:none
 }
-
 .logo {
-    cursor: pointer;
-    font-size: 40px;
-    color: var(--light);
+  cursor:pointer;
+  font-size:40px;
+  color:var(--light)
 }
-
 .links {
-    list-style: none;
+  list-style:none
 }
-
 .links li {
-    display: inline-block;
-    padding: 0px 20px;
+  display:inline-block;
+  padding:0 20px
 }
-
 .links li a {
-    position: relative;
+  position:relative
 }
-
-.links li a::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    width: 100%;
-    height: 3px;
-    background-color: var(--light);
-    border-radius: 5px;
-    transform: scaleX(0);
-    transition: all 0.4s;
+.links li a:after {
+  content:"";
+  position:absolute;
+  left:0;
+  bottom:-6px;
+  width:100%;
+  height:3px;
+  background-color:var(--light);
+  border-radius:5px;
+  transform:scaleX(0);
+  transition:all .4s
 }
-
-.links li a:hover::after {
-    transform: scaleX(1);
+.links li a:hover:after {
+  transform:scaleX(1)
 }
-
 .btn {
-    cursor: pointer;
-    width: 120px;
-    height: 45px;
-    background-color: var(--primary);
-    border: none;
-    outline: none;
-    border-radius: 11px;
-    font-weight: 400;
-    font-size: 16px;
-    color: #000;
-    text-decoration: none;
-    margin: 10px;
+  cursor:pointer;
+  width:120px;
+  height:45px;
+  background-color:var(--primary);
+  border:none;
+  outline:none;
+  border-radius:11px;
+  font-weight:400;
+  font-size:16px;
+  color:#000;
+  text-decoration:none;
+  margin:10px
 }
-
 .btn-empty {
-    cursor: pointer;
-    width: 120px;
-    height: 45px;
-    background: transparent;
-    border: 2px solid var(--primary);
-    border-color: var(--primary);
-    outline: none;
-    border-radius: 11px;
-    font-weight: 400;
-    font-size: 16px;
-    color: var(--light);
-    text-decoration: none;
-    margin: 10px;
-    margin-right: 10px;
+  cursor:pointer;
+  width:120px;
+  height:45px;
+  background:transparent;
+  border:2px solid var(--primary);
+  border-color:var(--primary);
+  outline:none;
+  border-radius:11px;
+  font-weight:400;
+  font-size:16px;
+  color:var(--light);
+  text-decoration:none;
+  margin:10px
 }
-
-/* HEADER */
-
 .header {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    text-align: center;
-    height: 830px;
-    margin: 0px 300px 0px 300px;
+  display:flex;
+  flex-direction:column;
+  align-content:center;
+  justify-content:center;
+  text-align:center;
+  height:830px;
+  margin:0 300px
 }
-
 .card {
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    background-color: #1c1d1d;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    padding: 0px 50px 50px 50px;
-    height: 600px;
-    width: 500px;
+  display:flex;
+  flex-direction:column;
+  border-radius:5px;
+  background-color:#1c1d1d;
+  box-shadow:#959da533 0 8px 24px;
+  padding:0 50px 50px;
+  height:600px;
+  width:500px
 }
-
 .header p {
-    line-height: 30px;
-    font-size: 1.1rem;
-    color: var(--light);
+  line-height:30px;
+  font-size:1.1rem;
+  color:var(--light)
 }
-
 .header h1 {
-    font-weight: 600;
-    font-size: 3rem;
-    color: var(--light);
+  font-weight:600;
+  font-size:3rem;
+  color:var(--light)
 }
-
 .card h1 {
-    font-size: 60px;
-    color: var(--light);
-    background-color: #00000000;
+  font-size:60px;
+  color:var(--light);
+  background-color:#0000
 }
-
 .card p {
-    font-size: 26px;
-    color: var(--light);
-    background-color: #00000000;
+  font-size:26px;
+  color:var(--light);
+  background-color:#0000
 }
-
 .background-1 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://images.unsplash.com/photo-1626285265896-49c3abb3952e?auto=format&fit=crop&q=80&w=1964&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-    background-size: cover;
-    background-position: bottom;
-    z-index: -1;
+  background-image:linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(https://images.unsplash.com/photo-1626285265896-49c3abb3952e?auto=format&fit=crop&q=80&w=1964&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size:cover;
+  background-position:bottom;
+  z-index:-1
 }
-
 .background-2 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://www.raicultura.it/dl/img/2019/10/04/1570203895060_h_00100269.jpg);
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
+  background-image:linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(https://www.raicultura.it/dl/img/2019/10/04/1570203895060_h_00100269.jpg);
+  background-size:cover;
+  background-position:center;
+  z-index:-1
 }
-
-
 .background-3 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://upload.wikimedia.org/wikipedia/commons/8/8e/Diga_del_Vajont_.jpg);
-    background-size: cover;
-    z-index: -1;
+  background-image:linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url(https://upload.wikimedia.org/wikipedia/commons/8/8e/Diga_del_Vajont_.jpg);
+  background-size:cover;
+  z-index:-1
 }
-
-/* HISTORY */
-
 .history {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    text-align: center;
-    height: 830px;
-    margin: 0px 160px 0px 160px;
+  display:flex;
+  align-content:center;
+  justify-content:center;
+  text-align:center;
+  padding:0 160px
+}
+.history-paragraph {
+  margin-bottom:200px
+}
+.history-paragraph-start {
+  margin-bottom:60px
+}
+.text-div h2 {
+  font-size:6em;
+  margin-bottom:0
+}
+.carousel-container {
+  width:  600px
+}
+.image-carousel {
+  border-radius:  10px;
 }
 
-.text-div {
-    flex: 80%; /* 80% of the available space */
-    padding: 100px 200px 0px 100px;
+.history-paragraph-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 200px;
 }
 
-.vertical-timeline {
-    flex: 20%; /* 20% of the available space */
-    height: fit-content;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    text-align: center;
+.text-left {
+  text-align: left;
 }
 
-
-/* FOOTER */
-
-
-footer{
-    background: var(--dark);
-    height: auto;
-    width: 100vw;
-    font-family: "Open Sans";
-    padding-top: 40px;
-    color: #fff;
+.rounded-image {
+  width: 600px;
 }
 
+.start-history {
+  display:flex;
+  align-items:center
+}
+.text-fix-history {
+  width:1000px
+}
+footer {
+  background:var(--dark);
+  height:auto;
+  width:100vw;
+  font-family:Open Sans;
+  padding-top:40px;
+  color:#fff
+}
 .footer-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  text-align:center
 }
-
-.footer-content h1{
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 3rem;
+.footer-content h1 {
+  font-size:1.8rem;
+  font-weight:400;
+  text-transform:capitalize;
+  line-height:3rem;
 }
-
-.footer-content p{
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
+.footer-content p {
+  max-width:500px;
+  margin:10px auto;
+  line-height:28px;
+  font-size:14px
 }
-
 .footer-text {
-    display: inline-block;
+  display:inline-block
 }
-
-.footer-contacts{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 3rem 0;
+.footer-contacts {
+  list-style:none;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  margin:1rem 0 3rem
 }
-
-.footer-contacts a{
-    margin: 0px 10px;
+.footer-contacts a {
+  margin:0 10px
 }
-
-.footer-contacts a{
-    text-decoration: none;
-    color: #fff;
+.footer-contacts a {
+  text-decoration:none;
+  color:#fff
 }
-
-.footer-contacts a{
-    font-size: 1.1rem;
-    transition: color .4s ease;
+.footer-contacts a {
+  font-size:1.1rem;
+  transition:color .4s ease
 }
-
-.footer-contacts a:hover{
-    color: var(--primary);
+.footer-contacts a:hover {
+  color:var(--primary)
 }
-
-.footer-bottom{
-    background: var(--dark);
-    padding: 20px 0;
-    text-align: center;
+.footer-bottom {
+  background:var(--dark);
+  padding:20px 0;
+  text-align:center
 }
-
-.footer-bottom p{
-    display: inline-block;
-    font-size: 14px;
-    word-spacing: 2px;
+.footer-bottom p {
+  display:inline-block;
+  font-size:14px;
+  word-spacing:2px
 }
-
-.footer-bottom span{
-    color: var(--primary);
-    font-weight: 500;
+.footer-bottom span {
+  color:var(--primary);
+  font-weight:500
 }
-
-/* TIMELINES */
-
+.centered-flex {
+  display:flex;
+  align-items:center
+}
 .vertical-timeline-line {
-    background: linear-gradient(to top, var(--dark) 10%, var(--primary) 40%, var(--primary) 80%, var(--dark) 100%);
-    width: 6px;
-    height: 2000px;
+  background:linear-gradient(to top,var(--dark) 20%,var(--primary) 40%,var(--primary) 80%,var(--dark) 100%);
+  width:6px;
+  height:2000px
 }
-
 .timeline {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    margin-bottom: 100px;
+  position:relative;
+  display:flex;
+  align-items:center;
+  justify-content:space-around;
+  width:100%;
+  margin-bottom:100px
 }
-
-.timeline::after {
-    content: '';
-    background-color: var(--primary);
-    height: 5px;
-    width: 100%;
-    position: absolute;
-    z-index: -1;
+.timeline:after {
+  content:"";
+  background:var(--primary);
+  height:5px;
+  width:200%;
+  position:absolute;
+  z-index:-1
 }
-
 .dot {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #0074d9;
-    margin: 0 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    transform: scale(1);
-    transition: all 0.1s linear;
+    width:50px;
+    height:50px;
+    border-radius:50%;
+    background-color:#0074d9;
+    margin:0 10px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:var(--dark-100);
+    transform:scale(1);
+    transition:all .5s ease
 }
-
 .dot:hover {
-    transform: scale(1.5);
+    transform:scale(1.61803398875)
 }
-
-/* Add custom styles to the dots, such as different colors or years */
-.dot.year-1990 {
-    background-color: #0074d9;
-}
-
-.dot.year-2000 {
-    background-color: #39cccc;
-}
-
-.dot.year-2010 {
-    background-color: #ff851b;
-}
-
-.dot.year-2020 {
-    background-color: var(--secondary);
-}
-
+.dot.year-1990,
+.dot.year-2000,
+.dot.year-2010,
+.dot.year-2020,
 .dot.year-2030 {
-    background-color: #3d9970;
+    background-color:var(--primary)
 }
