--- a/src/app.css
+++ b/src/app.css
@@ -286,7 +286,7 @@ a {
   background-color:#1c1d1d;
   box-shadow:#959da533 0 8px 24px;
   padding:0 50px 50px;
-  height:600px;
+  height:90vh;
   width:500px
 }
 .header p {
